# sandbox--dialogflow

./: .gitignore  Makefile  README.md  config.json  index.js  package.json
agent/: README.md  agent-config.js  config.js  create-agent.js  package.json
agent/agent-template/: agent.json
agent/agent-template/intents/: Default Fallback Intent.json  Default Welcome Intent.json  Default Welcome Intent_usersays_en.json  Greeting.json  Greeting_usersays_en.json
app/: README.md  build.sh  index.js  local-run.js  package.json
conversation-history/: Makefile  README.md  config.py  main.py  pyproject.toml  sample-log-entry.txt
conversation-history/conversation_history/: __init__.py  app.py  parser.py
conversation-history/tests/: test_conversation_history.py
infra/: main.tf  outputs.tf  variables.tf
infra/foundation/: main.tf  variables.tf
infra/system/: main.tf  outputs.tf  variables.tf
secrets/: auth-key.enc.txt  encrypted-auth-key.txt
