[tool.poetry]
name = "conversation-history"
version = "0.1.0"
description = ""
authors = ["Ryuichi Inagaki <ryuichi.inagaki.24@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lark-parser = "^0.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
